WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255975
[glib] Cog doesn't launch when built/started within podman container
https://bugs.webkit.org/show_bug.cgi?id=255975
Summary
[glib] Cog doesn't launch when built/started within podman container
Nikolas Zimmermann
Reported
2023-04-25 23:25:25 PDT
Source/WTF/wtf/glib/Sandbox.* contains code to disable bubblewrap sandboxing when used within a docker container -- extend that to cover all container engines"
Attachments
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2023-04-25 23:32:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13191
EWS
Comment 2
2023-04-28 03:20:22 PDT
Committed
263494@main
(2364ff02346a): <
https://commits.webkit.org/263494@main
> Reviewed commits have been landed. Closing PR #13191 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-04-28 03:21:20 PDT
<
rdar://problem/108652265
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug