Cherry-pick 263494@main (2364ff02346a). https://bugs.webkit.org/show_bug.cgi?id=255975

[glib] Cog doesn't launch when built/started within podman container
    https://bugs.webkit.org/show_bug.cgi?id=255975

    Reviewed by Adrian Perez de Castro.

    We intent to disable bubblewrap sandboxing when e.g. Cog is launched
    within a container -- however we only handle docker -- extend that to
    all OCI-compatible container execution engines (podman!).

    No new tests -- not testable within our CI/CD environment.

    * Source/WTF/wtf/glib/Sandbox.cpp:
    (WTF::isInsideContainer):
    (WTF::isInsideDocker): Deleted.
    * Source/WTF/wtf/glib/Sandbox.h:
    * Source/WebKit/UIProcess/Launcher/glib/ProcessLauncherGLib.cpp:
    (WebKit::ProcessLauncher::launchProcess):

    Canonical link: https://commits.webkit.org/263494@main